--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f57fc37ca90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1c33af3b10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f57fb89fdd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f57fb89ffd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1c34135bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1c34135dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f57fbafb710&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f57fbafb950&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1c3439e550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1c3439e750&gt;]</pre>
 </div>
 
 </div>
