--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa8f35df910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1305483390&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa8f3649a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa8f3649c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f13054faa10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f13054f9f10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa8f38b3390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa8f38b3590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1305744390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f130574e8d0&gt;]</pre>
 </div>
 
 </div>
