--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdd155d7dd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcfd45a3c90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdd14a37ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdd14a37cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcfd462bb10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcfd462bd10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdd14c78390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdd14c78590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcfd4895410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcfd4895610&gt;]</pre>
 </div>
 
 </div>
