--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcfd45a3c90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fad1d45bf10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcfd462bb10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcfd462bd10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fad1d774950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fad1d774b50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcfd4895410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcfd4895610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fad1d9b4290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fad1d9b4490&gt;]</pre>
 </div>
 
 </div>
