--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fad1d45bf10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7a14c4a550&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fad1d774950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fad1d774b50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7a1494fb10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7a1494fd10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fad1d9b4290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fad1d9b4490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7a14f014d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7a14f016d0&gt;]</pre>
 </div>
 
 </div>
