--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe5c6ea3a50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f47f3bf8b90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe5c7230a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe5c7230c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f47f3c73b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f47f3c73d50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe5c7499410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe5c7499610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f47f3eb4410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f47f3eb4610&gt;]</pre>
 </div>
 
 </div>
