--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f61eeba5ad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd68080b7d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f61ee52d050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f61ee52eb90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd680e4eb50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd680e4ed50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f61eeb45990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f61eeae1550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd6810b7410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd6810b7610&gt;]</pre>
 </div>
 
 </div>
