--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcf84a21a90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9596ad4d50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcf83f4cb90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcf83f4cd90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9596005a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9596005c50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcf8419e550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcf8419e750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f95962593d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f95962595d0&gt;]</pre>
 </div>
 
 </div>
