--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1ff185b050&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5f8ce05110&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1ff15648d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1ff1564ad0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5f8c321a10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5f8c321c10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1ff1b16310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1ff1b16510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5f8c58b310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5f8c58b510&gt;]</pre>
 </div>
 
 </div>
