--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdfeb7f9250&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4d31c21610&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdfeb88b850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdfeb88b9d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4d3227a910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4d3227ab10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdfebacb1d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdfebacb350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4d324ce290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4d324ce490&gt;]</pre>
 </div>
 
 </div>
