--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f92a016f190&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff159dc4990&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f929fe9d990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f929fe9d790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff159a8da50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff159a8dc10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f92a00dd290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f92a00dd090&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff159cf8350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff159cf8510&gt;]</pre>
 </div>
 
 </div>
