--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff159dc4990&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1393c2b3d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff159a8da50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff159a8dc10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1393175790&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1393146c10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff159cf8350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff159cf8510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f13933a5250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f13933b0550&gt;]</pre>
 </div>
 
 </div>
