--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f78167ab210&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2677ebcf90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7816524b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7816524d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2678649ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2678649cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7816a7b450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7816a7b650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f267888a350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f267888a550&gt;]</pre>
 </div>
 
 </div>
