--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2677ebcf90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8d57914f10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2678649ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2678649cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8d579a9c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8d579a9e10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f267888a350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f267888a550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8d57bfa5d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8d57bfa7d0&gt;]</pre>
 </div>
 
 </div>
