--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f099e7ea690&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4e2cb48c50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f099e4c7e50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f099e4b40d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4e2ce2f150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4e2ce4edd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f099ed56750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f099ed56990&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4e2d732ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4e2d6ca790&gt;]</pre>
 </div>
 
 </div>
