--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa5a5261450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd5f9803bd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa5a5581950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa5a5581610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd5f94f7a10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd5f94f7c10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa5a57d5410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa5a57d5610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd5f9d72390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd5f9d72590&gt;]</pre>
 </div>
 
 </div>
