--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f14211a6150&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9cc5c34a10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1420eedad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1420eedd10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9cc5c60350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9cc5c60910&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f142177a450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f142177a690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9cc5ec0310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9cc5ec0510&gt;]</pre>
 </div>
 
 </div>
