--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc017133e90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7c068505d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc0170e3e90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc0170f4fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7c068976d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7c06897d50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc01768a790&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc0176918d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7c06ad9490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7c06ad9690&gt;]</pre>
 </div>
 
 </div>
