--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f23c6ef1490&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9dd44b8ed0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f23c71f1ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f23c71f1cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9dd3ee9b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9dd3ee9d10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f23c744a4d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f23c744a6d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9dd4760450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9dd4760650&gt;]</pre>
 </div>
 
 </div>
