--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fae03841f50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f85f29aaa50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fae0351bb50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fae0351bd50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f85f2970c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f85f2970e90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fae03dac590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fae03dac790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f85f2f09650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f85f2f09850&gt;]</pre>
 </div>
 
 </div>
